--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,8 +1,7 @@
 <mat-card>
-  <mat-card-header>
-    <mat-card-title>Catégories</mat-card-title>
-    <mat-card-subtitle>Liste de toutes les catégories</mat-card-subtitle>
-  </mat-card-header>
+  <mat-card-title>Catégories</mat-card-title>
+  <mat-card-subtitle>Liste de toutes les catégories</mat-card-subtitle>
+  
   <mat-card-content>
     <table mat-table class="full-width-table" matSort aria-label="Éléments">
       <!-- Colonne Id -->
@@ -20,14 +19,17 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <mat-paginator #paginator
-        [length]="dataSource?.data?.length"
-        [pageIndex]="0"
-        [pageSize]="10"
-        [pageSizeOptions]="[5, 10, 20]"
-        aria-label="Sélectionner la page">
+    
+    <mat-paginator
+      #paginator
+      [length]="dataSource?.data?.length"
+      [pageIndex]="0"
+      [pageSize]="10"
+      [pageSizeOptions]="[5, 10, 20]"
+      aria-label="Sélectionner la page">
     </mat-paginator>
   </mat-card-content>
+  
   <mat-card-actions>
     <button mat-button>Nouvelle Catégorie</button>
   </mat-card-actions>
